fix: align nav bar

--- a/src/scss/sections/_nav.scss
+++ b/src/scss/sections/_nav.scss
@@ -59,6 +59,7 @@ nav {
     @include u.breakpoint(desktop) {
         flex-direction: row;
         width: 100%;
+        align-items: center;
     }
 }
 
